Enabled EjbContactsTest